# COP290

./: .gitignore  CMakeLists.txt  Makefile  README.md  angle_correction.cpp
assets/: baseline.txt
src/: Partc_Method_1.cpp  Partc_Method_2.cpp  Partc_Method_3.cpp  Partc_Method_4.cpp  angle_correction.cpp  partc.cpp  partc_old.cpp  partd.cpp  traffic_density.cpp
src/Method_1/: ErrorVsRuntime_1.csv  Method1_data.csv  plot.p  plot2.p
src/Method_2/: ErrorVsNoOfPixels.csv  Method2_data.csv  plot2_2.pas  plot_2.pas
src/Method_4/: Error Vs Runtime  Method_4_Data.csv  partc_Method4.cpp  plot_3.p
